alignment fix

--- a/assets/css/team.css
+++ b/assets/css/team.css
@@ -77,9 +77,6 @@ body, html {
   color: #ffffff;
 }
 
-.campusam {
-  width: 8vw;
-}
 
 .grid-item:hover {
   background-color: white;
