--- a/assets/css/teampage.css
+++ b/assets/css/teampage.css
@@ -178,7 +178,7 @@ body {
         height: 14vw;
         color: #fff;
         display: flex;
-        margin-top: 24vw;
+        margin-top: 15vw;
         flex-direction: row;
         justify-content: center;
         align-items: flex-end;
@@ -186,6 +186,20 @@ body {
         font-size: 8.5vw;
         font-weight: 800;
         /* background: linear-gradient(to right, rgb(245, 149, 120), rgb(231, 93, 208)); */
+    }
+
+    .topvid{
+        width: 50%;
+        height: 14vw;
+        color: #fff;
+        display: flex;
+        margin-top: 24vw;
+        flex-direction: row;
+        justify-content: center;
+        align-items: flex-end;
+        font-family: 'Poppins', sans serif;
+        font-size: 8.5vw;
+        font-weight: 800;
     }
     .mid {
         width: 100%;
